# TokenMind

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  README_PYPI.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  hatch_build.py  pyproject.toml  versions.json  web-agent-implementation-plan-v2.md
.claude/: settings.local.json
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
docs/: CHANNEL_PLUGIN_GUIDE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app.css  index.css  main.tsx  version.ts
frontend/tests/: assistantAttachments.test.ts  attachmentPreviewContent.test.ts  bellSkillSuggestions.test.ts  channelStatusBadge.test.ts  chatStoreConnectedSessions.test.ts  contextGauge.test.ts  creativeConfig.test.ts  creativePages.test.ts  fileEditProgress.test.ts  inputAreaDrag.test.ts  knowledgeDualModeFrontend.test.ts  messageBubbleContent.test.ts  musicPageState.test.ts  newSessionTimestamps.test.ts  overlayHost.test.ts  projectConfirmState.test.ts  projectEntryFlow.test.ts  projectEntryState.test.ts  projectSidebarState.test.ts  projectStore.test.ts  sessionRestoreState.test.ts  settingsCronCompletedUi.test.ts  settingsCronRefresh.test.ts  settingsModelAdvancedPlacement.test.ts  settingsNoticeLifecycle.test.ts  settingsProviderCardState.test.ts  settingsProviderPresetList.test.ts  settingsSelectStyles.test.ts  staleClientMismatch.test.ts  toolChainBubbleLayout.test.ts  ttsPageState.test.ts  updatesDownloadGuard.test.ts  voiceClonePageState.test.ts  websocketBackoff.test.ts  websocketReliability.test.ts
landing/: .gitignore  astro.config.mjs  package-lock.json  package.json  tsconfig.json
landing/scripts/: sync-brand-assets.sh
packaging/icons/: build-icons.sh
packaging/macos/: TokenMind.spec  build.sh  make_dmg_background.py  tokenmind.icns  tokenmind_desktop.py
packaging/windows/: TokenMind.iss  TokenMind.spec  build-installer.ps1  tokenmind_desktop.py
sun_agent/: __init__.py  __main__.py  audit.py
sun_agent/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
sun_agent/bus/: __init__.py  queue.py
sun_agent/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  registry.py  slack.py  telegram.py  wecom.py  whatsapp.py
sun_agent/cli/: __init__.py  commands.py  model_info.py  (+1 more)
tests/: test_agent_loop_usage_recording.py  test_agent_streaming_handler.py  test_anthropic_provider.py  test_assets_routes.py  test_attachment_ssrf.py  test_auth_verify_localhost_bypass.py  test_azure_openai_provider.py  test_base_channel.py  test_browser_agent_cli.py  test_browser_agent_decision.py  test_browser_agent_env_check.py  test_browser_agent_routes_takeover.py  test_browser_agent_storage.py  test_browser_agent_stream.py  test_browser_agent_stuck_detector.py  test_browser_agent_task_service.py  test_browser_install_gating.py  test_browser_task_tool.py  test_channel_plugins.py  test_chat_attachments.py  test_chat_knowledge_links.py  test_chat_uploads.py  test_cli_input.py  test_commands.py  test_config_migration.py  test_config_paths.py  test_config_routes.py  test_consolidate_offset.py  test_context_attachments.py  test_context_knowledge_excerpt.py  test_context_prompt_cache.py  test_creative_music_routes.py  test_creative_tts_routes.py  test_creative_voice_design_routes.py  test_creative_voice_routes.py  test_cron_delivery.py  test_cron_routes.py  test_cron_service.py  test_cron_tool_list.py  test_custom_provider.py  (+99 more)
tokenmind/: __init__.py  __main__.py  audit.py  templates_engine.py
(+447 files in other folders)
