[project]
name = "tokenmind-ai"
version = "0.1.14"
description = "A lightweight personal AI assistant framework"
readme = { file = "README_PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TokenMind contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.9.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ddgs>=9.5.5,<10.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "dingtalk-stream>=0.24.0,<1.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "socksio>=1.0.0,<2.0.0",
    "python-socketio>=5.16.0,<6.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "qq-botpy>=1.2.0,<2.0.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "questionary>=2.0.0,<3.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "chardet>=3.0.2,<6.0.0",
    "openai>=2.8.0",
    "tiktoken>=0.12.0,<1.0.0",
    "pypdf>=5.4.0,<6.0.0",
    "pymupdf>=1.24.0,<2.0.0",
    "python-docx>=1.0.0,<2.0.0",
    "python-pptx>=0.6.21,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pdf2image>=1.17.0,<2.0.0",
    "Pillow>=10.0.0,<13.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "qdrant-client>=1.15.1,<2.0.0",
    "beautifulsoup4>=4.12,<5.0",
    "markdownify>=0.13,<1.0",
]

[project.optional-dependencies]
wecom = [
    "wecom-aibot-sdk-python>=0.1.5",
]
langsmith = [
    "langsmith>=0.1.0",
]
asr = [
    "faster-whisper>=1.0.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]
windows = [
    "pyinstaller>=6.10,<7.0",
]
macos = [
    "pyinstaller>=6.10,<7.0",
]

[project.scripts]
tokenmind = "tokenmind.cli.commands:app"

[project.urls]
Homepage = "https://gitee.com/sun124578963_0/TokenMind"
Repository = "https://gitee.com/sun124578963_0/TokenMind"
Issues = "https://gitee.com/sun124578963_0/TokenMind/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "tokenmind/**/*.py",
    "tokenmind/webui/**/*",
    "tokenmind/templates/**/*.md",
    "tokenmind/skills/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["tokenmind"]

[tool.hatch.build.targets.wheel.sources]
"tokenmind" = "tokenmind"

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "tokenmind/bridge"

[tool.hatch.build.targets.sdist]
include = [
    "tokenmind/",
    "hatch_build.py",
    "bridge/",
    "frontend/",
    "packaging/",
    "README.md",
    "README_PYPI.md",
    "LICENSE",
]

[tool.hatch.build.hooks.custom]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "tokenmind/skills/documents",
    "tokenmind/skills/presentations",
    "tokenmind/skills/spreadsheets",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
